--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{background-color: grey;}
 .topic{color: red;
       border-style: double;
-      
+      border-width: 5px;
+      border-color: green;
      }
