--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body{
         }
  .content{
           background-color: black;
+          }
+  .a{
 
-
- }
+  	padding: 10px;
+  }
  p {color: white;
  }
