--- a/style.css
+++ b/style.css
@@ -17,10 +17,12 @@ body{
           }
   .a{
      border-style: solid;
+     border-width: 9px;
   	padding: 10px;
   }
   .b{
   	border-style: solid;
+  	border-width: 9px;
   	padding: 10px;
   }
  p {color: white;
