--- a/style.css
+++ b/style.css
@@ -18,12 +18,14 @@ body{
   .a{
      border-style: solid;
      border-width: 9px;
-  	padding: 10px;
-  }
+     border-color: blue;
+  	 padding: 10px;
+     }
   .b{
-  	border-style: solid;
-  	border-width: 9px;
-  	padding: 10px;
-  }
+  	 border-style: solid;
+  	 border-width: 9px;
+  	 border-color: blue;
+  	 padding: 10px;
+     }
  p {color: white;
  }
